--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -1,53 +1,32 @@
-.App {
-  text-align: center;
+body {
+    background-color: rgb(17, 118, 136)
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.main {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 500px;
+    text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+    color: white;
 }
-
-.App-link {
-  color: #61dafb;
+h3{
+    color: white;
 }
-
-::-webkit-scrollbar {
-  width: 8px;
-  border-radius: 10px;
-  background: transparent;
+p {
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    width: 350px;
+    margin: auto;
+    padding-top: 5px;
+    height: 30px;
+    color: grey;
 }
+a{
+    font-weight: bold;
+    font-style: italic;
+    color: rgb(17, 118, 136);
 
-::-webkit-scrollbar-track {
-  background: transparent;
-  background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #D4D3D3;
-  border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #888;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
